# HelixOS

./: .gitattributes  .gitignore  .graphifyignore  AGENTS.md  ARCHITECTURE.md  ROADMAP-SPECS.md  constitution.md  stress-test-verdict.html
kernel/: Cargo.toml
kernel/helix-contracts/: Cargo.toml
kernel/helix-contracts/examples/: plan_benchmark.rs
kernel/helix-contracts/src/: canonical.rs  crypto.rs  digest.rs  error.rs  lib.rs  plan.rs  resource.rs  validation.rs
kernel/helix-contracts/tests/: canonical.rs  conformance.rs  crypto.rs  eligibility_claims.rs  portability.rs  preparation_claims.rs  property.rs  resource.rs  soak.rs
kernel/helix-coordinator-sqlite/: Cargo.toml
kernel/helix-coordinator-sqlite/examples/: durable_dispatch_benchmark.rs  durable_dispatch_corpus.rs  durable_preparation_benchmark.rs  durable_preparation_corpus.rs
kernel/helix-coordinator-sqlite/src/: budget.rs  clock.rs  comparison_digest.rs  config.rs  connection.rs  dispatch.rs  dispatch_corpus.rs  dispatch_events.rs  dispatch_fault.rs  dispatch_manifest.rs  dispatch_outbox.rs  dispatch_preflight.rs  dispatch_quarantine.rs  dispatch_queue.rs  dispatch_readback.rs  dispatch_receipt.rs  dispatch_reconciliation.rs  dispatch_schema.rs  error.rs  failure.rs  lib.rs  maintenance.rs  manifest.rs  outbox.rs  preflight.rs  prepare.rs  quarantine.rs  readback.rs  retirement.rs  root_safety.rs  schema.rs  test_fault.rs  transition.rs
kernel/helix-coordinator-sqlite/tests/: backup_restore.rs  budget.rs  budget_property.rs  cancellation.rs  conformance.rs  conformance_execution.rs  contention.rs  contract.rs  deadline.rs  dispatch.rs  dispatch_commit.rs  dispatch_contention.rs  dispatch_corruption.rs  dispatch_end_to_end_contention.rs  dispatch_faults.rs  dispatch_maintenance_faults.rs  dispatch_migration.rs  dispatch_queue_control.rs  dispatch_readback.rs  dispatch_receipt.rs  dispatch_redaction.rs  dispatch_restore.rs  portability.rs  preparation.rs  process_crash.rs  production_backup_conformance.rs  production_restore_conformance.rs  recovery_integration.rs  redaction.rs  restore_maintenance_api.rs  retention.rs  schema_corruption.rs
kernel/helix-dispatch-contracts/: Cargo.toml
kernel/helix-dispatch-contracts/src/: canonical.rs  crypto.rs  digest.rs  error.rs  grant.rs  lib.rs  receipt.rs  validation.rs
kernel/helix-dispatch-contracts/tests/: grant_contract.rs  property.rs  receipt_contract.rs  redaction.rs
kernel/helix-dispatch-inbox-sqlite/: Cargo.toml
kernel/helix-dispatch-inbox-sqlite/src/: clock.rs  config.rs  connection.rs  epoch.rs  events.rs  inbox.rs  lib.rs  maintenance.rs  manifest.rs  quarantine.rs  queue.rs  readback.rs  receipt.rs  root_safety.rs  schema.rs  test_fault.rs
kernel/helix-dispatch-inbox-sqlite/tests/: backup_restore.rs  consume_once.rs  contention.rs  contract.rs  corruption.rs  maintenance.rs  portability.rs  process_crash.rs  production_receipt_readback.rs  queue_control.rs  receipt.rs  redaction.rs  retention.rs  stale_epoch.rs
kernel/helix-plan-dispatch/: Cargo.toml
kernel/helix-plan-dispatch/src/: attempt.rs  authority.rs  commit_gate.rs  compare.rs  control.rs  coordinator.rs  guard.rs  inbox.rs  lib.rs  outcome.rs  queue.rs  reconciliation.rs  request.rs  store.rs  test_fault.rs  transport.rs
kernel/helix-plan-dispatch/tests/: ambiguity.rs  authority.rs  bounds.rs  conformance.rs  contract.rs  control.rs  guard.rs  outcome.rs  portability.rs  reconciliation.rs  redaction.rs
kernel/helix-plan-eligibility/: Cargo.toml
kernel/helix-plan-eligibility/examples/: eligibility_benchmark.rs  eligibility_corpus.rs
kernel/helix-plan-eligibility/src/: context.rs  denial.rs  evaluator.rs  lib.rs  marker.rs  replay.rs
kernel/helix-plan-eligibility/test-support/: conformance_cases.rs  replay_claimant.rs
kernel/helix-plan-eligibility/tests/: authority.rs  conformance.rs  contention.rs  contract.rs  eligibility.rs  policy_and_capabilities.rs  portability.rs  property.rs  redaction.rs  replay.rs  replay_verification.rs  soak.rs  time_and_epochs.rs
kernel/helix-plan-preparation/: Cargo.toml
kernel/helix-plan-preparation/src/: attempt.rs  budget.rs  commit_gate.rs  compare.rs  context.rs  controlled_benchmark.rs  coordinator.rs  guard.rs  lib.rs  outcome.rs  recovery.rs  store.rs  test_fault.rs
kernel/helix-plan-preparation/tests/: conformance.rs  contract.rs  freshness.rs  recovery.rs  redaction.rs  revocation.rs
kernel/helix-replay-sqlite/: Cargo.toml
kernel/helix-replay-sqlite/examples/: durable_replay_benchmark.rs
kernel/helix-replay-sqlite/src/: claim.rs  clock.rs  config.rs  connection.rs  error.rs  lib.rs  maintenance.rs  manifest.rs  root_safety.rs  schema.rs  test_fault.rs  verification.rs
kernel/helix-replay-sqlite/tests/: backup_restore.rs  claim.rs  conformance.rs  conformance_execution.rs  contention.rs  contract.rs  deadline.rs  eligibility_integration.rs  initialization_faults.rs  portability.rs  preparation_verification.rs  process_crash.rs  redaction.rs  root_safety_process.rs  schema_corruption.rs
kernel/helix-task-authority/: Cargo.toml
kernel/helix-task-authority-contracts/: Cargo.toml
kernel/helix-task-authority-contracts/src/: canonical.rs  crypto.rs  digest.rs  error.rs  human_request_grant.rs  lib.rs  task_lease.rs  validation.rs
kernel/helix-task-authority-contracts/tests/: cross_contract.rs  human_request_grant_contract.rs  portability.rs  property.rs  redaction.rs  task_lease_contract.rs  us1_fixtures.rs
kernel/helix-task-authority-projections/: Cargo.toml
kernel/helix-task-authority-projections/src/: lib.rs
kernel/helix-task-authority-sqlite/: Cargo.toml
kernel/helix-task-authority-sqlite/src/: clock.rs  config.rs  connection.rs  event.rs  grant.rs  lease.rs  lib.rs  queue.rs  readback.rs  revocation.rs  root_safety.rs  schema.rs  test_fault.rs
kernel/helix-task-authority-sqlite/tests/: contention.rs  contract.rs
kernel/helix-task-authority/src/: control.rs  guard.rs  lease.rs  lib.rs  (+6 more)
kernel/helixos-kernel/: Cargo.toml
kernel/helixos-mcp-shim/: Cargo.toml
kernel/helixos-provision/: Cargo.toml
(+471 files in other folders)
