[workspace]
members = [
    "helix-contracts",
    "helix-dispatch-contracts",
    "helix-dispatch-inbox-sqlite",
    "helix-plan-eligibility",
    "helix-plan-dispatch",
    "helix-plan-preparation",
    "helix-replay-sqlite",
    "helix-coordinator-sqlite",
    "helixos-kernel",
    "helixos-mcp-shim",
    "helixos-provision",
]
resolver = "2"
