[workspace]
members = [
    "helix-contracts",
    "helix-dispatch-contracts",
    "helix-dispatch-inbox-sqlite",
    "helix-plan-eligibility",
    "helix-plan-dispatch",
    "helix-plan-preparation",
    "helix-replay-sqlite",
    "helix-coordinator-sqlite",
    "helix-task-authority-contracts",
    "helix-task-authority",
    "helix-task-authority-sqlite",
    "helix-task-authority-projections",
    "helixos-kernel",
    "helixos-mcp-shim",
    "helixos-provision",
]
resolver = "2"
