[package]
name = "helix-contracts"
version = "0.1.0"
edition = "2021"
publish = false
description = "Portable, canonical, signed HelixOS contracts"

[dependencies]
base64 = { version = "=0.22.1", default-features = false, features = ["std"] }
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["fast", "std", "zeroize"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde_json_canonicalizer = "=0.3.2"
sha2 = { version = "=0.10.9", default-features = false }
thiserror = "=2.0.18"
unicode-normalization = "=0.1.25"

[dev-dependencies]
proptest = "=1.11.0"
