[package]
name = "helix-dispatch-inbox-sqlite"
version = "0.1.0"
edition = "2021"
publish = false
description = "SQLite-backed durable dispatch inbox for HelixOS"

[dependencies]
helix-dispatch-contracts = { path = "../helix-dispatch-contracts" }
helix-plan-dispatch = { path = "../helix-plan-dispatch" }
rusqlite = { version = "=0.40.1", default-features = false, features = ["backup", "bundled"] }
serde = { version = "=1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "=1.0.150", default-features = false, features = ["std"] }
serde_json_canonicalizer = "=0.3.2"
sha2 = { version = "=0.10.9", default-features = false }

[features]
default = []
test-fault-injection = ["helix-plan-dispatch/test-fault-injection"]

[dev-dependencies]
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std"] }
