[package]
name = "helix-plan-eligibility"
version = "0.1.0"
edition = "2021"
publish = false
description = "Portable point-in-time plan eligibility for HelixOS"

[dependencies]
helix-contracts = { path = "../helix-contracts" }

[dev-dependencies]
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std"] }
proptest = "=1.11.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde_json_canonicalizer = "=0.3.2"
