[package]
name = "helix-replay-sqlite"
version = "0.1.0"
edition = "2021"
publish = false
description = "Crash-aware durable SQLite replay claimant for HelixOS"

[dependencies]
getrandom = { version = "=0.4.3", default-features = false }
helix-contracts = { path = "../helix-contracts" }
helix-plan-eligibility = { path = "../helix-plan-eligibility" }
rusqlite = { version = "=0.40.1", default-features = false, features = ["backup", "bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = { version = "=0.10.9", default-features = false }

[features]
default = []
test-fault-injection = []

[dev-dependencies]
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std"] }
