[package]
name = "helix-task-authority"
version = "0.1.0"
edition = "2021"
publish = false
description = "Portable signed task-authority orchestration for HelixOS"

[dependencies]
getrandom = { version = "=0.4.3", default-features = false }
helix-contracts = { path = "../helix-contracts" }
helix-task-authority-contracts = { path = "../helix-task-authority-contracts" }

[features]
default = []
controlled-benchmark = []
test-fault-injection = []

[dev-dependencies]
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std"] }
proptest = "=1.11.0"
serde_json = "=1.0.150"
serde_json_canonicalizer = "=0.3.2"
